# sismis_atlas

./: Cargo.toml  Makefile  README.md  build.sh  config.json  config.json.beagle
app/: Cargo.toml  index.html
app/src/: component_umap.rs  core_model.rs  main.rs  model_about.rs  model_atlas.rs  model_genbank.rs  model_landing.rs  palette.csv  umap.frag  umap.vert  umap_index.rs  webgl.rs
app/style/: style.scss
server/: Cargo.toml
server/src/: genbank.rs  genbank_async.rs  genbank_convert_archflow.rs  genbank_convert_rszip.rs  genbank_convert_sqlite.rs  genbank_query_rszip.rs  genbank_query_sqlite.rs  genbank_query_unzip.rs  main.rs  sequence_data.rs  sqlite.rs  umap.rs
src/: lib.rs
