[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version ="0.21.0", features=["csr"]}  
my-web-app = {path=".."}
native-json = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.44"
getrandom = { version = "0.3", features = ["wasm_js"] }
log = "0.4"
wasm-logger = "0.2"
geojson = "0.24.2"
wasm-bindgen = "0.2.100"
reqwest = { version = "0.12.22", features = ["json"] }
futures = "0.3.31"
js-sys = "0.3.77"
rand = "0.9.2"
gb-io = "0.9.0"
serde_cbor = "0.11.2"
bytes = {version = "1.10.1", features = ["std"]}


[dependencies.web-sys]
version = "0.3.77"
features = [
  'HtmlCanvasElement',
  'HtmlSelectElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'DomRect',
  'CanvasRenderingContext2d'
]


[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']
