[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.6"
my-web-app = {path=".."}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9.0"
csv = "1.2.2"
lazy_static = "1.5.0"
rusqlite = { version = "0.37.0", features = ["column_metadata"] }
async-stream = "0.3.6"
archflow = "0.1.4"
tokio = "1.47.0"
tokio-util = {version = "0.7.15", features=["io"]}

#https://docs.rs/archflow/latest/archflow/
